--- a/coolmq/pom.xml
+++ b/coolmq/pom.xml
@@ -2,55 +2,63 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
+
     <modelVersion>4.0.0</modelVersion>
-    
-    	<groupId>com.furioustidy</groupId>
+
+    <groupId>com.furioustidy</groupId>
     <artifactId>coolmq</artifactId>
     <version>1.0-SNAPSHOT</version>
-	
-	 <properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	    <java.version>1.8</java.version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <springboot.version>2.0.5.RELEASE</springboot.version>
     </properties>
-	
-    <dependencies>       
-    		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.8.9</version>
-		</dependency>
-		    		
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${springboot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
-             <groupId>org.springframework.amqp</groupId>
-	        	<artifactId>spring-rabbit</artifactId>
-	        <version>2.0.3.RELEASE</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
-		
+
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>2.0.2.RELEASE</version>
         </dependency>
-        
-        
+
+
         <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
-		<dependency>
-		    <groupId>org.aspectj</groupId>
-		    <artifactId>aspectjrt</artifactId>
-		    <version>1.8.13</version>
-		</dependency>
-		
-		<dependency>
-		      <groupId>com.github.rholder</groupId>
-		      <artifactId>guava-retrying</artifactId>
-		      <version>2.0.0</version>
-		</dependency>
-		        
-             
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.rholder</groupId>
+            <artifactId>guava-retrying</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -72,5 +80,5 @@
             </plugin>
         </plugins>
     </build>
-   
+
 </project>
